# Bayronik

./: .gitignore  Cargo.toml  GUIDE.md  README.md  run_bayronik.sh
bayronik-core/: Cargo.toml  nbody_map_256.npy
bayronik-core/examples/: generate_map.rs
bayronik-core/src/: io.rs  lib.rs  main.rs  output.rs
bayronik-core/src/sim/: evolve.rs  fft_solver.rs  forces.rs  gravity.rs  grid.rs  mod.rs  particle.rs
bayronik-infer/: Cargo.toml
bayronik-infer/src/: heatmap.rs  main.rs
bayronik-model/: config.py  exporter.py  requirements.txt  train.py
bayronik-model/scripts/: dataset.py  dataset_hdf5.py  model.py
