[package]
name = "bayronik-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = "4.5.49"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
ndrustfft = "0.5.0"
num-complex = "0.4.6"
rand = "0.9.2"
rand_distr = "0.5.1"
ratatui = "0.29.0"
rayon = "1.11.0"
rustfft = "6.4.1"
serde = "1.0.228"
serde_yaml = "0.9.34"
